feat: use favicon.svg as official MathBlast icon for all browsers and Apple touch

--- a/index.html
+++ b/index.html
@@ -4,17 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <title>MathBlast</title>
-  <meta name="description" content="MathBlast – Fast-paced math question generator for Mr. Yeung's class" />
-  <meta name="author" content="Arslan Sohail" />
 
+  <!-- ── Favicons & App Icons ── -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <meta name="theme-color" content="#0f172a" />
+
+  <!-- ── Page Info ── -->
+  <title>MathBlast</title>
+  <meta name="description"
+    content="MathBlast – Fast-paced math question generator built for Mr. Yeung's class at Dakota Collegiate" />
+  <meta name="author" content="Arslan Sohail" />
+  <meta name="application-name" content="MathBlast" />
+
+  <!-- ── Open Graph ── -->
   <meta property="og:title" content="MathBlast" />
   <meta property="og:description" content="Fast-paced math question generator built for Dakota Collegiate" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="MathBlast" />
 
-  <meta name="twitter:card" content="summary_large_image" />
+  <!-- ── Twitter Card ── -->
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="MathBlast" />
+  <meta name="twitter:description" content="Fast-paced math question generator built for Dakota Collegiate" />
 </head>
 
 <body>
